codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__user_image_labels_follow_the_painted_prompt_surface.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 2448
expression: "snapshots.join(\"\\n\")"
---
(255, 255, 255): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "▌                               ",
        "▌ [Image #2]                    ",
        "▌                               ",
        "▌ [Image #1] describe these     ",
        "▌                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(18, 20, 30): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "▌                               ",
        "▌ [Image #2]                    ",
        "▌                               ",
        "▌ [Image #1] describe these     ",
        "▌                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(95, 95, 95): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "▌                               ",
        "▌ [Image #2]                    ",
        "▌                               ",
        "▌ [Image #1] describe these     ",
        "▌                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(99, 168, 248), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
